add UP Studio G-Code Tutorial.

--- a/download_cn.html
+++ b/download_cn.html
@@ -256,6 +256,13 @@
 					</div>
 					<div class="doclist" id="docdownloadlist">
 						<li><div class="txt">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_Studio_G_Code_Tutorial.pdf">UP Studio G-Code Tutorial</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_Studio_G_Code_Tutorial.pdf"><img	src="https://www.up3d.com/resource/images/ico_down.png"></a>
+							</div>
+						</li>
+						<li><div class="txt">
 								<a target=_blank href="http://up3d-dev.github.io/downloads/docs/UP_3D_Printer_Wi-Fi_Upgrade_Guide_en.pdf">UP 3D Printer Wi-Fi Upgrade Guide</a>
 							</div>
 							<div class="ico">
