--- a/download_cn.html
+++ b/download_cn.html
@@ -151,6 +151,12 @@
 								<a target=_blank href="https://itunes.apple.com/cn/app/up-studio/id1119477741?mt=12"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
 							</div></li>
 							<li><div class="txt">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV2002.LKD">LKD file For UP Studio on MAC Version:2.0.0.2</a>
+							</div>
+							<div class="ico">
+								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV2002.LKD"><img src="https://cn.up3d.com/resource/images/ico_down.png"></a>
+							</div></li>
+							<li><div class="txt">
 								<a target=_blank href="https://cn.up3d.com/resource/client/TierTimeV2001.LKD">LKD file For UP Studio on MAC Version:2.0.0.1</a>
 							</div>
 							<div class="ico">
