--- a/support_cn.html
+++ b/support_cn.html
@@ -64,7 +64,7 @@
                                  </ul>
 							</div>
 						</div> </li>
-					<li class="nav-item"><a class="link" href="https://www.up3d.com/?r=printers"><span
+					<li class="nav-item"><a class="link" href="https://store.up3d.com/"><span
 							class="text">Store </span><span class="arrow"></span></a></li>
 					<li class="nav-item"><a class="link" href="https://www.up3d.com/community/"><span
 							class="text">Forum</span><span class="arrow"></span></a></li>
