--- a/download.html
+++ b/download.html
@@ -64,7 +64,7 @@
 							</div>
 						</div>
 					<!--主导航下拉显示层 end--></li>
-					<li class="nav-item"><a class="link" href="https://www.up3d.com/?r=printers"><span class="text">Store </span><span class="arrow"></span></a></li>
+					<li class="nav-item"><a class="link" href="https://store.up3d.com/"><span class="text">Store </span><span class="arrow"></span></a></li>
 					<li class="nav-item"><a class="link" href="https://www.up3d.com/community/"><span class="text">Forum</span><span class="arrow"></span></a></li>
 					<li class="nav-item"><a class="link" href="http://up3d-dev.github.io/support.html"><span class="text">Support</span><span class="arrow"></span></a></li>
 					<li class="nav-item"><a class="link" href="https://www.up3d.com/blog/"><span class="text">Blog</span><span class="arrow"></span></a></li>
