--- a/support.html
+++ b/support.html
@@ -65,7 +65,7 @@
 							</div>
 						</div>
 						<!--主导航下拉显示层 end--></li>
-					<li class="nav-item"><a class="link" href="https://www.up3d.com/?r=printers"><span
+					<li class="nav-item"><a class="link" href="https://store.up3d.com/"><span
 							class="text">Store </span><span class="arrow"></span></a></li>
 					<li class="nav-item"><a class="link" href="https://www.up3d.com/community/"><span
 							class="text">Forum</span><span class="arrow"></span></a></li>
